[gd_scene load_steps=32 format=3 uid="uid://cv681glpaopqi"]

[ext_resource type="Script" path="res://scenes/entities/enemy/goblin.gd" id="1_7nil5"]
[ext_resource type="Texture2D" uid="uid://mmb3ivbkajyk" path="res://assets/platformer_metroidvania asset pack v1.01/enemies sprites/goblin/goblin_attack_anim_strip_4.png" id="1_v16ms"]
[ext_resource type="Texture2D" uid="uid://efl4gtlxfw3c" path="res://assets/platformer_metroidvania asset pack v1.01/enemies sprites/goblin/goblin_idle_anim_strip_4.png" id="2_hafh4"]
[ext_resource type="Texture2D" uid="uid://2tvuw4m23qtg" path="res://assets/platformer_metroidvania asset pack v1.01/enemies sprites/goblin/goblin_death_anim_strip_6.png" id="3_nm08r"]
[ext_resource type="Texture2D" uid="uid://bnd464iuvkf3u" path="res://assets/platformer_metroidvania asset pack v1.01/enemies sprites/goblin/goblin_run_anim_strip_6.png" id="4_mw8k5"]
[ext_resource type="Script" path="res://scenes/entities/enemy/State Machine.gd" id="6_1ntfy"]
[ext_resource type="Script" path="res://scripts/States/EnemyIdle.gd" id="7_uiq60"]
[ext_resource type="Script" path="res://scripts/States/EnemyFollow.gd" id="8_tltk8"]
[ext_resource type="AudioStream" uid="uid://d4kygtid6l8h8" path="res://sounds/sfx/Cute/Toon/Toon Attack 001.wav" id="9_8482c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3oui3"]
atlas = ExtResource("1_v16ms")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u43x"]
atlas = ExtResource("1_v16ms")
region = Rect2(24, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljj4e"]
atlas = ExtResource("1_v16ms")
region = Rect2(48, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnn0o"]
atlas = ExtResource("1_v16ms")
region = Rect2(72, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3xva"]
atlas = ExtResource("2_hafh4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jee4"]
atlas = ExtResource("2_hafh4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifuek"]
atlas = ExtResource("2_hafh4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6715c"]
atlas = ExtResource("2_hafh4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukucl"]
atlas = ExtResource("3_nm08r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi7em"]
atlas = ExtResource("3_nm08r")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0melb"]
atlas = ExtResource("3_nm08r")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tecuh"]
atlas = ExtResource("3_nm08r")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5c8j"]
atlas = ExtResource("3_nm08r")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0jca"]
atlas = ExtResource("3_nm08r")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8kt"]
atlas = ExtResource("4_mw8k5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mi2e"]
atlas = ExtResource("4_mw8k5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5kdr"]
atlas = ExtResource("4_mw8k5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcrs"]
atlas = ExtResource("4_mw8k5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvw5l"]
atlas = ExtResource("4_mw8k5")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjw83"]
atlas = ExtResource("4_mw8k5")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q3r63"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oui3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u43x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljj4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnn0o")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3xva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jee4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifuek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6715c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukucl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi7em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0melb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tecuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5c8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0jca")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mi2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5kdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvw5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjw83")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6mhab"]
radius = 5.0
height = 18.0

[node name="goblin" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_7nil5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q3r63")
animation = &"attack"
autoplay = "default"

[node name="die" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-25, 0)
rotation = -1.5708
stream = ExtResource("9_8482c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("CapsuleShape2D_6mhab")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initail_state")]
script = ExtResource("6_1ntfy")
initail_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="State Machine"]
script = ExtResource("7_uiq60")
move_speed = null
enemy = Object(CharacterBody2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"disable_mode":0,"collision_layer":1,"collision_mask":1,"collision_priority":1.0,"input_pickable":false,"motion_mode":0,"up_direction":Vector2(0, -1),"velocity":Vector2(0, 0),"slide_on_ceiling":true,"max_slides":4,"wall_min_slide_angle":0.261799,"floor_stop_on_slope":true,"floor_constant_speed":false,"floor_block_on_wall":true,"floor_max_angle":0.785398,"floor_snap_length":1.0,"platform_on_leave":0,"platform_floor_layers":4294967295,"platform_wall_layers":0,"safe_margin":0.08,"script":ExtResource("1_7nil5"))


[node name="EnemyFollow" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_tltk8")
enemy = NodePath("../..")

[node name="RayCast2DGround" type="RayCast2D" parent="."]
position = Vector2(20, -40)

[node name="RayCast2DWall" type="RayCast2D" parent="."]
position = Vector2(-25, 0)
rotation = -1.5708
